Resolves: tdf#103359 undo of insert of multi column frame crashes

this pattern has been seen before in #i32968#, so fix the same way

Change-Id: I72ac628ee507abf23c38defede33058b34e17857
(cherry picked from commit e1dea8100b345b15705cad366d1bcc9516bb15e9)
Reviewed-on: https://gerrit.libreoffice.org/30153
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 8f6d624843fef768a159724e199459a23f3ad2bb)